[project]
name = "zantas"
version = "0.1.0"
description = "A Zwift-equivalent cycling trainer application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.21.0",
    "pycycling>=0.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "websockets>=11.0",
]
